# congenial-octo-memory

./: .gitignore  AGENTS.md  CLAUDE.md  app.py  build.ps1  build_exe.spec  diag_audio.py  pyproject.toml  readme.md  readme_web.md
.claude/: settings.local.json
.github/workflows/: build.yml  ghcr-cleanup.yml
src/piro_overlay/: __init__.py  api.py  audio_sync.py  cli.py  config.py  ffmpeg.py  gui.py  i18n.py  models.py  overlay.py  parser.py  pipeline.py  preview.py  render.py  resources.py
tests/: conftest.py  test_api.py  test_audio_sync.py  test_cli.py  test_config.py  test_ffmpeg.py  test_i18n.py  test_id_tone.py  test_models.py  test_overlay.py  test_parser.py  test_pipeline.py  test_preview.py  test_render.py  test_syntax.py  test_web_api.py  test_web_limits.py
web/: Dockerfile  docker-compose.yml  requirements.txt
web/backend/: api.py  app.py  cleanup.py  filedb.py  jobs.py  ratelimit.py  sessions.py  settings.py  workers.py
web/static/: app.js  index.html  style.css
