[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piro-overlay"
version = "0.26.0"
description = "Nakładka informacyjna o strzałach (split/czas/hit factor) na wideo ze strzelania"
readme = "readme.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Jarosław Zjawiński", email = "kontakt@zjawa.it" },
]
dependencies = [
    "PySide6>=6.6",
    "Pillow>=10.0",
    "numpy>=1.24",
    "requests>=2.31",
    "imageio-ffmpeg>=0.4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
# Backend WWW (web/) — dev lokalny; Docker instaluje web/requirements.txt.
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
piro-overlay = "piro_overlay.cli:main"

[project.gui-scripts]
piro-overlay-gui = "piro_overlay.gui:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
piro_overlay = ["../../assets/fonts/*.ttf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
